style: Fix font sizes on mobile screens

--- a/output.css
+++ b/output.css
@@ -633,7 +633,7 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(16 185 129 / var(--tw-border-opacity, 1));
   padding: 0.25rem;
-  font-size: clamp(1.1rem,1.4vw,1.25rem);
+  font-size: clamp(1.05rem,1.3vw,1.2rem);
   font-weight: 600;
   text-transform: uppercase;
   line-height: 1.25;
